@@ -1,3 +1,11 @@
+2005-11-19  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/Makefile.in :
+	* lib/clist.c :
+	* lib/clist.h :
+
+	  - Added clist for grounding of interval variables.
+
 2005-11-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* lib/network.c :
